update the readme details and ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ chairbot_ws/src/chairbot
 chairbot_ws/src/chairbot_path_planning
 
 # Chaibot workspace
-.catkin_workspace
+*.catkin_work*
 # *.catkin_workspace
 # *chairbot_ws/build
 # *chairbot_ws/devel
@@ -18,6 +18,68 @@ chairbot_ws/src/chairbot_path_planning
 # *chairbot_ws/src/chairbot_localization/CMakeLists.txt
 # *chairbot_ws/src/chairbot_localization/package.xml
 # *chairbot_ws/src/chairbot_localization/src/CMakeLists.txt
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# user setting
+*.*~
+*.bak
+.svn
+.tags
+.tags_sorted_by_file
+*.cfgc
+*.txt.user*
+*-build/
+cpp/
+bin/
+build/
+msg_gen/
+srv_gen/
+docs/
+lib/
+cmake_install.cmake
+Makefile
+CMakeFiles/
+assets/
+gen/
+build.xml
+lint.xml
+local.properties
+proguard-project.txt
+build-*/
+*.autosave
+*.pyc
+*.dat
+*.txt.user
+*.gch
+
 
 # User-specific files
 *.rsuser
