--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,22 @@ chairbot_ws/src/chairbot_path_planning
 
 
 # Chairbot Packages
-chairbot_ws/src/CMakeLists.txt
+src/CMakeLists.txt
+
+#Simulation
+src/chairbot_simulation/CMakeLists.txt
+src/chairbot_simulation/package.xml
+src/chairbot_simulation/src/CMakeLists.txt
 
 #Localization
-*chairbot_ws/src/chairbot_localization/CMakeLists.txt
-*chairbot_ws/src/chairbot_localization/package.xml
-*chairbot_ws/src/chairbot_localization/src/CMakeLists.txt
+src/chairbot_localization/CMakeLists.txt
+src/chairbot_localization/package.xml
+src/chairbot_localization/src/CMakeLists.txt
+
+#Localization
+src/chairbot_navigation/CMakeLists.txt
+src/chairbot_navigation/package.xml
+src/chairbot_navigation/src/CMakeLists.txt
 
 # Compiled Object files
 *.slo
