--- a/src/chairbot_path_planning/maps/office_map2.yaml
+++ b/src/chairbot_path_planning/maps/office_map2.yaml
@@ -1,4 +1,4 @@
-image: /home/aqborromeo/chairbot_ws/src/chairbot_navigation/maps/office_map2.pgm
+image: office_map2.pgm
 resolution: 0.050000
 origin: [-10.000000, -10.000000, 0.000000]
 negate: 0
